removing app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.config.import = env.properties
 spring.datasource.url=jdbc:postgresql://localhost:5432/hotel_users
 spring.datasource.username=
 spring.datasource.password=
@@ -8,8 +9,8 @@ spring.cache.host=localhost
 spring.cache.port=10226
 server.port=8081
 spring.mail.host=smtp.gmail.com
-spring.mail.username=indrajitizian@gmail.com
-spring.mail.password=mipt qoac hqva uhww
+spring.mail.username=EMAIL_USERNAME
+spring.mail.password=EMAIL_PASSWORD
 spring.mail.port=587
 spring.mail.properties.mail.smtp.auth:true
 spring.mail.properties.mail.smtp.starttls.enable:true
